<resources>
    <string name="app_name_placeholder">Ride %1$s</string>
    <string name="app_name_formatted_placeholder">Ride|%1$s</string>
    <string name="waiting_for_drivers">Waiting for drivers…</string>
    <string name="cancelling_ride">Cancelling ride…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="payment">Payment</string>
    <string name="history">Trip History / Support</string>
    <string name="help">Help</string>
    <string name="promotions">Promotions</string>
    <string name="donate">Round Up</string>
    <string name="drive_with_ride_city">Drive with %1$s</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ut">University of Texas</string>
    <string name="requesting">Requesting&#8230;</string>
    <string name="enter_pickup_address">Enter pickup</string>
    <string name="enter_destination_address">Enter destination</string>
    <string name="set_pickup_location">Set Pickup location</string>
    <string name="minutes">MIN</string>
    <string name="error_places_autocomplete">Unable to fetch address. Please contact support</string>
    <string name="oops">OOPS</string>
    <string name="no_available_cars">Set Pickup location</string>
    <string name="coming_soon_in_your_area">Coming soon in your area</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="placeholder_rate">5</string>
    <string name="hint_leave_comment">Comments are anonymously shared with drivers</string>
    <string name="ride_summary_description">Thank you for the ride!</string>
    <string name="rate_unable_to_load_map">Unable to load ride map</string>
    <string name="btn_submit">Submit</string>
    <string name="text_cancel_ride_dialog">Do you really want to cancel this ride?</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_call">CALL</string>
    <string name="mock">Mock</string>
    <string name="location_error">Can not get location. Please check settings and enable location.</string>
    <string name="unable_resolve_address">Unable to resolve this location,  please try again</string>
    <string name="map_title_confirmation">Confirmation</string>
    <string name="map_title_requesting">Requesting</string>
    <string name="map_title_driver_on_way">Driver on way</string>
    <string name="map_title_driver_arrived">Driver arrived</string>
    <string name="slider_label_eta">ETA</string>
    <string name="slider_label_people">MAX SIZE</string>
    <string name="slider_label_pricing">VIEW PRICING</string>
    <string name="slider_label_estimate">GET RIDE ESTIMATE</string>
    <string name="choose_a_round_up">Choose to round up the cost of your fare to help support the local community. Please select your preferred charity.</string>
    <string name="round_up_fare">Round up fare</string>
    <string name="round_up">Round up</string>
    <string name="choose_charity">Choose charity</string>
    <string name="promotions_title">Enter Promo Code</string>
    <string name="promo_description">If you have a %1$s Promo Code, \nenter it and save on your ride.</string>
    <string name="promo_hint">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="text_want_referral_discounts">Want Referral Discounts?</string>
    <string name="text_invite_your_friends">INVITE YOUR FRIENDS</string>
    <string name="text_promocode">Promo Code</string>
    <string name="error_promocode">Promo Code cannot be applied</string>
    <string name="text_promo_success">Congratulations!\nPromo Code %1$s has been applied. $%2$.2f has been added to your account.</string>
    <string name="text_free_rides">Free rides</string>
    <string name="text_invite_body">You should try the local non-profit rideshare called %3$s! Your first ride will be free up to $%1$.2f if you use my Promo Code %2$s.
        Download the app at: %4$s</string>
    <string name="text_invite_title">%1$s free credit</string>
    <string name="text_email_action">Send Email</string>
    <string name="share_action">Share Using</string>
    <string name="extra_sms">sms_body</string>
    <string name="referral_discounts_title">Referral Discounts</string>
    <string name="referral_discounts_description">Earn Discounts</string>
    <string name="free_rides_intro_ref">Details</string>
    <string name="free_rides_send_promo">Send your Promo Code</string>
    <string name="email_invite">Email Invite</string>
    <string name="text_invite">Text Invite</string>
    <string name="social_share">Share on social media</string>
    <string name="promo_code_error">Sorry, we are unable to retrieve your Promo Code. Please try again later</string>
    <string name="edit_account">Edit Account</string>
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="legal">Legal</string>
    <string name="sign_out">Sign out</string>
    <string name="title_payment">Payment</string>
    <string name="title_payment_add">Add Payment</string>
    <string name="title_payment_edit">Edit Payment</string>
    <string name="title_payment_history">Payment History</string>
    <string name="label_payment_methods">Payment Methods</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="promo_payment_get_free_rides">Get Free Rides!</string>
    <string name="promo_payment_invite">Invite Your Friends</string>
    <string name="payment_delete_confirm">Are you sure you want to delete this credit card?</string>
    <string name="payment_delete_error">You can not delete primary card</string>
    <string name="payment_add_error">Please, enter valid data for your card</string>
    <string name="payment_add_error_already_exists">This card already exists.\nPlease, enter new one.</string>
    <string name="payment_set_primary_error">There appears to be a problem with the newly selected primary card. Please add or select another payment card.</string>
    <string name="payment_card_template">Personal <b>&#183; &#183; &#183; &#183;</b> %1$s</string>
    <string name="payment_select_method">Please select payment method</string>
    <string name="hint_credit_card_number">Credit Card Number</string>
    <string name="hint_credit_card_mm">MM</string>
    <string name="hint_credit_card_yy">YY</string>
    <string name="hint_credit_card_cvv">CVV</string>
    <string name="hint_zip">ZIP</string>
    <string name="btn_add_payment">Add Payment</string>
    <string name="notification_verify_email_before">Verify email to start riding</string>
    <string name="notification_set_payment_before">Save a payment method to start riding</string>
    <string name="notification_primary_card_expired">Your primary credit card expired</string>
    <string name="error_set_payment_before">Please save a payment\n method to start riding.</string>
    <string name="warning_location_distance">Your requested pickup location is more than %d yards away from your current location. Continue?</string>
    <string name="text_pickup_time_less_tan_min">Pickup time is approximately &lt;1 min</string>
    <plurals name="text_pickup_time">
        <item quantity="one">Pickup time is approximately %1$s min</item>
        <item quantity="other">Pickup time is approximately %1$s mins</item>
    </plurals>
    <string name="title_fare_estimate">Fare Estimate</string>
    <string name="empty" />
    <string name="placeholder_home_location">Home\n205 Congress ave # 2555</string>
    <string name="placeholder_location">Work\n401 Congress Ave #2650</string>
    <string name="text_fares">Fares may vary due to traffic, weather and other factors. Estimate does not include discounts or promotions. Routes displayed are examples and may not reflect the route on which estimates are based</string>
    <string name="error_pickup_location">Pickup location cannot be blank</string>
    <string name="error_destination_location">Destination location cannot be blank</string>
    <string name="title_no_driver_available">No Driver Available</string>
    <string name="message_no_driver_available">We are sorry currently no driver is available at your location.</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="save">Save</string>
    <string name="frca_disclosure_any_questions">If you have any questions related to the screening process, please
        contact us at applicant.checkr.com.</string>
    <string name="first_name">First Name</string>
    <string name="middle_name_s">Middle Name(s)</string>
    <string name="i_confirm_that_i_do_not_have_a_middle_name">I confirm that I do not have a Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth_mm_dd_yyyy">Date of Birth (MM/DD/YYYY)</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="current_zipcode">Current Zipcode</string>
    <string name="driver_license_number">Driver License Number</string>
    <string name="d_l_sate">D.L. State</string>
    <string name="summary_of_your_rights_under_the_fair_credit_reporting_act">Summary of Your Rights Under the Fair
        Credit Reporting Act
    </string>
    <string name="the_fcra_is_a_complex_piece">The FCRA is a complex piece of legislation and contains numerous
        provisions not discussed on this page. Below are several important features of how the FCRA is designed to help
        consumers (for the complete text, visit the Federal Trade Commission). The FCRA protects you by requiring
        consumer reporting agencies.
    </string>
    <string name="the_fcra_background_check_authorization">Acknowledgment and Authorization for background
        check</string>
    <string name="the_fcra_background_check_authorization_first_paragraph">I acknowledge receipt of the separate
        document
        entitled DISCLOSURE REGARDING BACKGROUND INVESTIGATION and A SUMMARY OF YOUR RIGHTS UNDER THE FAIR CREDIT REPORTING ACT and certify that I have read and understand both of those documents.  I hereby authorize the obtaining of “consumer reports” and/or “investigative consumer reports” by the Company at any time after receipt of this authorization and throughout my contract, if applicable.  To this end, I hereby authorize, without reservation, any law enforcement agency, administrator, state or federal agency, institution, school or university (public or private), information service bureau, employer, or insurance company to furnish any and all background information requested by Checkr, Inc., 2505 Mariposa St. Floor 2, San Francisco, CA 94110 | 844-824-3247 | applicant.checkr.com.  I agree that an electronic copy of this Authorization shall be as valid as the original.</string>
    <string name="the_fcra_background_check_authorization_electronic_signature">Electronic Signature</string>
    <string name="full_name">Full name</string>
    <string name="acknowledge_receipt_summary">I acknowledge receipt of the Summary of Your Rights Under the Fair Credit
        Reporting Act
    </string>
    <string name="text_change_password">Change Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_new_password">New Password (6+ Characters)</string>
    <string name="accessibility">Accessibility</string>
    <string name="menu_female_only_mode">Female Driver Mode</string>
    <string name="menu_fingerprinted_only_mode">Fingerprinted Driver Mode</string>
    <string name="connect_driver_info">Direct Connect enables you to pair with your driver by simply entering in their Driver ID</string>
    <string name="direct_connect_id_hint">Enter Driver ID</string>
</resources>