<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.rideaustin.ui.drawer.editprofile.UpdatePasswordViewModel"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/LinearLayout.Base"
        android:orientation="vertical"
        android:background="@color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar.Base"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_change_password"/>

        </android.support.v7.widget.Toolbar>

        <include layout="@layout/view_single_divider"/>

        <EditText
            android:id="@+id/edt_password"
            style="@style/EditText.Profile"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="@={viewModel.password}" />

        <EditText
            android:id="@+id/edt_confirm_password"
            style="@style/EditText.Profile"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="@={viewModel.confirmPassword}" />

        <Button
            android:id="@+id/btn_sumbit_password"
            style="@style/Button.RoundedBlueButton"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/save"/>
    </LinearLayout>
</layout>